versioned_docs/version-2.22/reference/subsystems/jvm.mdx
---
title: jvm
description: |
  Options for general JVM functionality.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for general JVM functionality.

JDK strings will be passed directly to Coursier&#x27;s `--jvm` parameter. Run `cs java --available` to see a list of available JVM versions on your platform.

If the string `'system'` is passed, Coursier&#x27;s `--system-jvm` option will be used instead, but note that this can lead to inconsistent behavior since the JVM version will be whatever happens to be found first on the system&#x27;s PATH.

Backend: <span className="color--primary">`pants.backend.experimental.java`</span>

Config section: <span className="color--primary">`[jvm]`</span>

<span className={styles.options}>

## Basic options

### `debug_args`

<Option
  cli_repr={`--jvm-debug-args="['<str>', '<str>', ...]"`}
  env_repr='PANTS_JVM_DEBUG_ARGS'
  toml_repr={`[jvm]
debug_args = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Extra JVM arguments to use when running tests in debug mode.

For example, if you want to attach a remote debugger, use something like `['-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005']`.

</Option>

### `default_resolve`

<Option
  cli_repr={`--jvm-default-resolve=<str>`}
  env_repr='PANTS_JVM_DEFAULT_RESOLVE'
  toml_repr={`[jvm]
default_resolve = <str>`}
  default_repr={`jvm-default`}
>

The default value used for the `resolve` and `compatible_resolves` fields.

The name must be defined as a resolve in `[jvm].resolves`.

</Option>

### `deploy_jar_exclude_files`

<Option
  cli_repr={`--jvm-deploy-jar-exclude-files="['<str>', '<str>', ...]"`}
  env_repr='PANTS_JVM_DEPLOY_JAR_EXCLUDE_FILES'
  toml_repr={`[jvm]
deploy_jar_exclude_files = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "^META-INF/[^/]+\\.SF\$",\n  "^META-INF/[^/]+\\.DSA\$",\n  "^META-INF/[^/]+\\.RSA\$",\n  "META-INF/INDEX.LIST\$"\n]`}
>

A list of patterns to exclude from all deploy jars. An individual deploy_jar target can also exclude other files, in addition to these, by setting its `exclude_files` field.

</Option>

### `resolves`

<Option
  cli_repr={`--jvm-resolves="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_JVM_RESOLVES'
  toml_repr={`[jvm.resolves]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "jvm-default": "3rdparty/jvm/default.lock"\n}`}
>

A dictionary mapping resolve names to the path of their lockfile.

</Option>

## Advanced options

### `global_options`

<Option
  cli_repr={`--jvm-global-options="['<str>', '<str>', ...]"`}
  env_repr='PANTS_JVM_GLOBAL_OPTIONS'
  toml_repr={`[jvm]
global_options = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
  target_field_name='jvm_global_options'
>

List of JVM options to pass to all JVM processes.

Options set here will be used by any JVM processes required by Pants, with the exception of heap memory settings like `-Xmx`, which need to be set using `[GLOBAL].process_total_child_memory_usage` and `[GLOBAL].process_per_child_memory_usage`.

</Option>

### `jdk`

<Option
  cli_repr={`--jvm-jdk=<str>`}
  env_repr='PANTS_JVM_JDK'
  toml_repr={`[jvm]
jdk = <str>`}
  default_repr={`temurin:1.11`}
>

The JDK to use.

This string will be passed directly to Coursier&#x27;s `--jvm` parameter. Run `cs java --available` to see a list of available JVM versions on your platform.

If the string `'system'` is passed, Coursier&#x27;s `--system-jvm` option will be used instead, but note that this can lead to inconsistent behavior since the JVM version will be whatever happens to be found first on the system&#x27;s PATH.

</Option>

### `nailgun_remote_cache_speculation_delay`

<Option
  cli_repr={`--jvm-nailgun-remote-cache-speculation-delay=<int>`}
  env_repr='PANTS_JVM_NAILGUN_REMOTE_CACHE_SPECULATION_DELAY'
  toml_repr={`[jvm]
nailgun_remote_cache_speculation_delay = <int>`}
  default_repr={`1000`}
>

The time in milliseconds to delay speculation of nailgun processes while reading from the remote cache.

When speculating, a remote cache hit will cancel the local copy of a process. But because nailgun does not natively support cancellation, that requires killing a nailgun server, which will mean that future processes take longer to warm up.

This setting allows for trading off waiting for potentially slow cache entries against potentially having to warm up a new nailgun server.

</Option>

### `reproducible_jars`

<Option
  cli_repr={`--[no-]jvm-reproducible-jars`}
  env_repr='PANTS_JVM_REPRODUCIBLE_JARS'
  toml_repr={`[jvm]
reproducible_jars = <bool>`}
  default_repr={`False`}
>

When enabled, JAR files produced by JVM tools will have timestamps stripped.

Because some compilers do not support this step as a native operation, it can have a performance cost, and is not enabled by default.

</Option>

### `tool_jdk`

<Option
  cli_repr={`--jvm-tool-jdk=<str>`}
  env_repr='PANTS_JVM_TOOL_JDK'
  toml_repr={`[jvm]
tool_jdk = <str>`}
  default_repr={`temurin:1.11`}
>

The JDK to use when building and running Pants&#x27; internal JVM support code and other non-compiler tools. See `jvm` help for supported values.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
